# lonelyradio

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml
docs/: protocol.md
lonelyradio_types/: Cargo.toml
lonelyradio_types/src/: lib.rs
microserve/: Cargo.toml
microserve/src/: main.rs
monoclient/: Cargo.toml
monoclient-s/: Cargo.toml  build.rs  lib.rs  lonelyradio.icns
monoclient-s/src/: app.rs  lib.rs  main.rs
monoclient-s/ui/: ui.slint
monoclient-s/ui/icons/: LICENSE  README.md
monoclient-x/monoclient-x/: ContentView.swift  Info.plist  Metadata.swift  Player.swift  monoclient_xApp.swift
monoclient-x/monoclient-x.xcodeproj/: project.pbxproj
monoclient-x/monoclient-x.xcodeproj/xcshareddata/xcschemes/: monoclient-x.xcscheme
monoclient-x/monoclient-x/Assets.xcassets/AppIcon.appiconset/: Contents.json
monoclient/src/: main.rs
monolib/: Cargo.toml  README.md  cbindgen.toml
monolib/src/: c.rs  decode.rs  lib.rs  module.modulemap  monolib.h  reader.rs
monoloader/: Cargo.toml
monoloader/src/: main.rs
platform/: README.md
platform/swiftui/: Launch Screen.storyboard  MonoLib-Bridging-Header.h
platform/swiftui/monoclient/: ContentView.swift  monoclientApp.swift
platform/swiftui/monoclient/Assets.xcassets/AppIcon.appiconset/: Contents.json
platform/swiftui/monolib/: Cargo.toml
platform/swiftui/monolib/src/: lib.rs  monolib.h
src/: decode.rs  encode.rs  main.rs  writer.rs
