[workspace]
members = ["monoclient", "monolib"]

[package]
name = "lonelyradio"
description = "TCP radio for lonely ones"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Ivan Bushchik <ivabus@ivabus.dev>"]
repository = "https://github.com/ivabus/lonelyradio"

[dependencies]
rand = "0.8.5"
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1.35.1", features = [
    "sync",
    "fs",
    "io-util",
    "net",
    "rt-multi-thread",
    "rt",
    "macros",
] }
walkdir = "2.4.0"
symphonia = { version = "0.5.4", features = [
    "all-codecs",
    "all-formats",
    "opt-simd",
] }
chrono = "0.4"
rmp-serde = "1.1.2"
serde = { version = "1.0.197", features = ["derive"] }
lofty = "0.18.2"
async-stream = "0.3.5"
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures-util = "0.3.30"
samplerate = "0.2.4"

[profile.release]
opt-level = 3
