[package]
name = "lonelyradio_types"
description = "Shared types for lonelyradio"
license = "MIT"
version = "0.5.0"
edition = "2021"
authors = ["Ivan Bushchik <ivabus@ivabus.dev>"]
repository = "https://github.com/ivabus/lonelyradio"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
