[package]
name = "lonelyradio_types"
edition = "2021"
version = "0.7.0"
authors = ["Ivan Bushchik <ivabus@ivabus.dev>"]
description = "Shared types for lonelyradio"
license = "MIT"
repository = "https://github.com/ivabus/lonelyradio"


[dependencies]
serde = {version = "1.0.209", features = ["derive"]}
serde_bytes = {version = "0.11.15"}
