[package]
name = "monoclient-s"
description = "Client for lonelyradio built with Slint"
version = "0.6.0"
edition = "2021"

[dependencies]
slint = { version = "1.6", features = ["backend-android-activity-06"] }
monolib = { path = "../monolib", version = "0.6.0" }
lonelyradio_types = { version = "0.6.0", path = "../lonelyradio_types" }
zune-jpeg = "0.4.11"

[lib]
crate-type = [ "cdylib" ]

[package.metadata.bundle]
name = "monoclient-s"
identifier = "dev.ivabus.monoclient-s"
icon = ["lonelyradio.png", "lonelyradio.icns"]
version = "0.5.0"
copyright = "Copyright (c) 2024 Ivan Bushchik."
category = "Music"
