[package]
name = "monoclient-s"
description = "Client for lonelyradio built with Slint"
version = "0.7.0"
edition = "2021"

[dependencies]
slint = { version = "1.6" }
monolib = { path = "../monolib", version = "0.7.1" }
zune-jpeg = "0.4.13"

[package.metadata.bundle]
name = "monoclient-s"
identifier = "dev.ivabus.monoclient-s"
icon = ["lonelyradio.png", "lonelyradio.icns"]
version = "0.5.0"
copyright = "Copyright (c) 2024 Ivan Bushchik."
category = "Music"
