[package]
name = "monoclient"
license = "MIT"
version = "0.6.0"
edition = "2021"
authors = ["Ivan Bushchik <ivabus@ivabus.dev>"]
repository = "https://github.com/ivabus/lonelyradio"

[dependencies]
monolib = { version = "0.6.0", path = "../monolib" }
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
lonelyradio_types = { version = "0.6.0", path = "../lonelyradio_types" }

