[package]
name = "monolib"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "A library implementing the lonely radio audio streaming protocol"
repository = "https://github.com/ivabus/lonelyradio"
authors = ["Ivan Bushchik <ivabus@ivabus.dev>"]

[lib]
name = "monolib"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
rodio = { version = "0.19.0", default-features = false }
byteorder = "1.5.0"
rmp-serde = "1.1.2"
lonelyradio_types = { version = "0.7.0", path = "../lonelyradio_types" }
anyhow = "1.0.86"

# Optional decoders
claxon = { version = "0.4.3", optional = true }
symphonia-codec-alac = {version = "0.5.4", optional = true }
symphonia-core = {version = "0.5.4", optional = true }
vorbis_rs = {version = "0.5.4", optional = true }

[features]
default = ["all-lossless", "all-lossy"]
all-lossless = ["alac", "flac"]
all-lossy = ["vorbis"]
alac = ["dep:symphonia-codec-alac", "dep:symphonia-core"]
flac = ["dep:claxon"]
vorbis = ["dep:vorbis_rs"]

[package.metadata.xcframework]
include-dir = "src"
lib-type = "cdylib"
zip = false
macOS = true
iOS = true
#tvOS = true
simulators = true
