[package]
name = "monolib"
version = "0.7.1"
edition = "2021"
license = "MIT"
description = "A library implementing the lonelyradio audio streaming protocol"
repository = "https://github.com/ivabus/lonelyradio"
authors = ["Ivan Bushchik <ivabus@ivabus.dev>"]

[lib]
name = "monolib"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
rodio = { version = "0.19.0", default-features = false }
byteorder = "1.5.0"
rmp-serde = "1.1.2"
lonelyradio_types = { version = "0.7.0", path = "../lonelyradio_types" }
anyhow = "1.0.86"

# Optional decoders
claxon = { version = "0.4.3", optional = true }
symphonia-codec-alac = {version = "0.5.4", optional = true }
symphonia-core = {version = "0.5.4", optional = true }
lewton = {version = "0.10.2", optional = true }
sea-codec = { version = "0.5.2", optional = true }

[features]
default = ["all-lossless", "all-lossy"]
all-lossless = ["alac", "flac"]
all-lossy = ["vorbis", "sea"]
alac = ["dep:symphonia-codec-alac", "dep:symphonia-core"]
flac = ["dep:claxon"]
vorbis = ["dep:lewton"]
sea = ["dep:sea-codec"]

[package.metadata.xcframework]
include-dir = "src"
lib-type = "cdylib"
zip = false
macOS = true
iOS = true
simulators = false
