[package]
name = "monoloader"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monolib = { version = "0.7.1", path = "../monolib" }
clap = { version = "4.4.18", features = ["derive"] }
hound = "3.5.1"
