[package]
name = "monolib"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
rodio = { version = "0.17.3", default-features = false }
byteorder = "1.5.0"
rmp-serde = "1.1.2"
serde = { version = "1.0.197", features = ["derive"] }


[lib]
name = "monolib"
crate-type = ["staticlib", "cdylib"]
